--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "require": {
         "php": ">=5.3.3",
 
-        "friendsofsymfony/user-bundle":        "~2.0@dev"
+        "friendsofsymfony/user-bundle": "2.0.*@dev"
     },
     "autoload": {
         "psr-4": { "Magice\\Bundle\\UserBundle\\": "" }
