--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,9 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.3.3",
-        "hwi/oauth-bundle":                 "0.4.*@dev",
-        "friendsofsymfony/user-bundle":     "2.0.*@dev",
-        "stof/doctrine-extensions-bundle":  "~1.1@dev",
+        "hwi/oauth-bundle":                 "0.4.*",
+        "friendsofsymfony/user-bundle":     "2.0.*",
+        "stof/doctrine-extensions-bundle":  "~1.1",
         "misd/phone-number-bundle":         "~1.0"
     },
     "autoload": {
