--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.3.3",
+        "jms/serializer-bundle":            "master-dev",
         "hwi/oauth-bundle":                 "0.4.*",
         "friendsofsymfony/user-bundle":     "2.0.*",
         "stof/doctrine-extensions-bundle":  "~1.1",
