--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     "target-dir": "Magice/Bundle/UserBundle",
     "extra": {
         "branch-alias": {
-            "dev-master": "master-dev"
+            "dev-master": "@dev"
         }
     }
 }
