--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,9 @@
     ],
     "require": {
         "php": ">=5.3.3",
-        "jms/serializer-bundle":            "master-dev",
-        "hwi/oauth-bundle":                 "0.4.*",
-        "friendsofsymfony/user-bundle":     "2.0.*",
+        "jms/serializer-bundle":            "~0.11",
+        "hwi/oauth-bundle":                 "~0.4",
+        "friendsofsymfony/user-bundle":     "~2.0",
         "stof/doctrine-extensions-bundle":  "~1.1",
         "misd/phone-number-bundle":         "~1.0"
     },
