--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
     "require": {
         "php": ">=5.3.3",
         "jms/serializer-bundle":            "~0.11",
-        "hwi/oauth-bundle":                 "~0.4",
-        "friendsofsymfony/user-bundle":     "~2.0",
+        "hwi/oauth-bundle":                 "0.4.*@dev",
+        "friendsofsymfony/user-bundle":     "2.0.*@dev",
         "stof/doctrine-extensions-bundle":  "~1.1",
         "misd/phone-number-bundle":         "~1.0"
     },
