--- a/Resources/config/validation.yml
+++ b/Resources/config/validation.yml
@@ -72,6 +72,10 @@ FOS\UserBundle\Model\Group:
 
 Magice\Bundle\UserBundle\Entity\UserInfo:
     properties:
+        gender:
+            - NotBlank:
+                message: _mg.user.info.gender.blank
+
         firstname:
             - NotBlank:
                 message: _mg.user.info.firstname.blank
@@ -90,9 +94,14 @@ Magice\Bundle\UserBundle\Entity\UserInfo:
                 max: 255
                 maxMessage: _mg.user.info.lastname.long
 
+        birthday:
+            - NotBlank:
+                message: _mg.user.info.birthday.blank
+
         mobile:
             - NotBlank:
                 message: _mg.user.info.mobile.blank
+                groups: [Strict]
             - Magice\Validator\Constraints\Phone:
                 defaultRegion: TH
                 message: _mg.user.info.mobile.invalid
