--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     
     "require": {
         "php": ">=5.3.3",
-        "hwi/oauth-bundle":                 "~0.4@dev",
+        "hwi/oauth-bundle":                 "0.4.*@dev",
         "friendsofsymfony/user-bundle":     "~2.0@dev",
         "stof/doctrine-extensions-bundle":  "~1.1",
         "magice/validator":                 "0.1"
