--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "require": {
         "php": ">=5.3.3",
         "hwi/oauth-bundle":                 "master-dev",
-        "friendsofsymfony/user-bundle":     "~2.0.*@dev",
+        "friendsofsymfony/user-bundle":     "~2.0@dev",
         "stof/doctrine-extensions-bundle":  "~1.1",
         "magice/validator":                 "0.1"
     },
