--- a/composer.json
+++ b/composer.json
@@ -5,23 +5,35 @@
     "keywords": ["user"],
     "homepage": "https://github.com/Joypricecorp/MagiceUserBundle",
     "license": "MIT",
+    
     "authors": [
         {
             "name":  "ツ Liverbool",
             "email": "nukboon@gmail.com"
         }
     ],
+    
     "require": {
         "php": ">=5.3.3",
         "hwi/oauth-bundle":                 "0.4.*@dev",
-        "friendsofsymfony/user-bundle":     "2.0.*@dev",
+        "friendsofsymfony/user-bundle":     "~2.0@dev",
         "stof/doctrine-extensions-bundle":  "~1.1",
         "magice/validator":                 "0.1"
     },
+    
+    "require-dev": {
+        "liil/kint":                            "master-dev",
+        "doctrine/doctrine-fixtures-bundle":    "master-dev"
+    },
+    
     "autoload": {
         "psr-0": { "Magice\\Bundle\\UserBundle\\": "" }
     },
+    
     "target-dir": "Magice/Bundle/UserBundle",
+    
+    "minimum-stability": "dev",
+    
     "extra": {
         "branch-alias": {
             "dev-master": "master-dev"
