--- a/Resources/config/validation.yml
+++ b/Resources/config/validation.yml
@@ -1,4 +1,4 @@
-Magice\Bundle\UserBundle\Entity\UserInfo:
+Magice\Bundle\UserBundle\Model\UserInfo:
     properties:
         gender:
             - NotBlank:
