update dependency package

--- a/composer.json
+++ b/composer.json
@@ -17,13 +17,12 @@
         "php": ">=5.3.3",
         "hwi/oauth-bundle":                 "0.4.*@dev",
         "friendsofsymfony/user-bundle":     "~2.0@dev",
-        "stof/doctrine-extensions-bundle":  "~1.1",
-        "magice/validator":                 "0.1"
+        "stof/doctrine-extensions-bundle":  "~1.1"
     },
     
     "require-dev": {
-        "liil/kint":                            "master-dev",
-        "doctrine/doctrine-fixtures-bundle":    "master-dev"
+        "liil/kint":                            "dev-master",
+        "doctrine/doctrine-fixtures-bundle":    "dev-master"
     },
     
     "autoload": {
